minor refactoring while i figure out how to make this work