@@ -1,29 +1,34 @@
 package online.maestoso.soulforged.client.render;
 
 import com.mojang.datafixers.util.Pair;
-import net.fabricmc.fabric.api.client.model.BakedModelManagerHelper;
+
 import net.fabricmc.fabric.api.client.model.ModelProviderContext;
-import net.fabricmc.fabric.api.renderer.v1.mesh.QuadEmitter;
 import net.fabricmc.fabric.api.renderer.v1.model.FabricBakedModel;
 import net.fabricmc.fabric.api.renderer.v1.render.RenderContext;
+
 import net.minecraft.block.BlockState;
+
 import net.minecraft.client.render.model.*;
-import net.minecraft.client.render.model.json.JsonUnbakedModel;
 import net.minecraft.client.render.model.json.ModelOverrideList;
 import net.minecraft.client.render.model.json.ModelTransformation;
-import net.minecraft.client.render.model.json.Transformation;
 import net.minecraft.client.texture.Sprite;
 import net.minecraft.client.util.SpriteIdentifier;
+
 import net.minecraft.item.ItemStack;
+
 import net.minecraft.nbt.NbtCompound;
+
 import net.minecraft.util.Identifier;
 import net.minecraft.util.math.BlockPos;
 import net.minecraft.util.math.Direction;
+
 import net.minecraft.world.BlockRenderView;
+
+import online.maestoso.soulforged.Soulforged;
+
 import org.jetbrains.annotations.Nullable;
 
 import java.util.*;
-import java.util.function.Consumer;
 import java.util.function.Function;
 import java.util.function.Supplier;
 
@@ -64,12 +69,13 @@ public class ForgedToolItemModel implements UnbakedModel, BakedModel, FabricBake
     @Nullable
     @Override
     public BakedModel bake(ModelLoader loader, Function<SpriteIdentifier, Sprite> textureGetter, ModelBakeSettings rotationContainer, Identifier modelId) {
+        Soulforged.LOGGER.info("Attempting to bake ForgedToolItemModel");
         return null;
     }
 
     @Override
     public Collection<Identifier> getModelDependencies() {
-        return Arrays.asList(ITEM_HANDHELD_MODEL);
+        return List.of(ITEM_HANDHELD_MODEL);
     }
     // Below is all the stuff I don't care about. It's down here because I don't care about it.
     @Override public List<BakedQuad> getQuads(@Nullable BlockState state, @Nullable Direction face, Random random) {
